--- a/package.json
+++ b/package.json
@@ -5,18 +5,70 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "node -r ts-node/register/transpile-only -r tsconfig-paths/register src/shared/infra/http/server.ts",
-    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,ts,tsx}\""
+  },
+  "prisma": {
+    "seed": "ts-node src/shared/infra/database/seed.ts"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "fastify": "^5.1.0"
+    "@prisma/client": "^5.9.1",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.3.6",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "expo-server-sdk": "^3.7.0",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
+    "jsonwebtoken": "^9.0.0",
+    "mime": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.10.0",
+    "prisma": "^5.9.1",
+    "rate-limiter-flexible": "^2.4.1",
+    "redis": "^4.6.6",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.7",
+    "ts-jest": "^29.2.5",
+    "tsyringe": "^4.7.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/module-alias": "^2.0.4",
-    "@types/node": "^22.10.1",
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/node": "^7.20.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/jest": "^29.5.5",
+    "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.7.0",
+    "prettier": "^2.8.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.2"
+    "typescript": "^4.9.4"
   }
 }
