--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sqlite3": "^5.1.7",
     "ts-jest": "^29.2.5",
     "tsyringe": "^4.7.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.5",
