--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint \"**/*.{js,ts,tsx}\""
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "prepare": "husky"
   },
   "prisma": {
     "seed": "ts-node src/shared/infra/database/seed.ts"
@@ -26,6 +27,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
