--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redis": "^4.6.6",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^4.6.2",
     "ts-jest": "^29.2.5",
     "tsyringe": "^4.7.0",
     "uuid": "^9.0.0",
@@ -73,5 +74,12 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.4"
+  },
+  "compilerOptions": {
+    "module": "esnext",
+    "target": "es2022",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strict": true
   }
 }
