--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mime": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "pg": "^8.10.0",
     "prisma": "^5.9.1",
     "rate-limiter-flexible": "^2.4.1",
@@ -59,6 +60,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.5.5",
     "@types/multer": "^1.4.7",
+    "@types/node-cron": "^3.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
