--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redis": "^4.6.6",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.7",
+    "supertest": "^7.1.1",
     "swagger-ui-express": "^4.6.2",
     "ts-jest": "^29.2.5",
     "tsyringe": "^4.7.0",
@@ -61,6 +62,7 @@
     "@types/jest": "^29.5.5",
     "@types/multer": "^1.4.7",
     "@types/node-cron": "^3.0.11",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
