--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/shared/infra/http/server.js",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
-    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "husky"
@@ -41,6 +41,7 @@
     "redis": "^4.6.6",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.7",
+    "supertest": "^7.1.1",
     "swagger-ui-express": "^4.6.2",
     "ts-jest": "^29.2.5",
     "tsyringe": "^4.7.0",
@@ -61,12 +62,14 @@
     "@types/jest": "^29.5.5",
     "@types/multer": "^1.4.7",
     "@types/node-cron": "^3.0.11",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "cross-env": "^7.0.3",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
