--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,26 @@ name: CI
 on:
   pull_request:
     branches:
-      - develop # ou o nome da sua branch principal
+      - develop
       - master
 
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: test_db
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - name: Checkout do código
@@ -17,13 +31,25 @@ jobs:
       - name: Instalar Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18" # ou a versão que você usa
+          node-version: "18"
 
       - name: Instalar dependências
         run: yarn install # ou npm install
 
+      - name: Definir DATABASE_URL para o container MySQL
+        run: echo "DATABASE_URL=mysql://root:root@localhost:3306/test_db" >> $GITHUB_ENV
+
+      - name: Gerar client do Prisma
+        run: npx prisma generate
+
+      - name: Rodar migrations no banco
+        run: npx prisma migrate deploy
+
+      - name: Rodar seeds no banco
+        run: npx prisma db seed
+
       - name: Rodar linter
-        run: yarn lint # ou npm run lint
+        run: yarn lint
 
       - name: Rodar testes
         run: yarn test --ci --passWithNoTests
