--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           node-version: "22.14.0"
 
       - name: Instalar dependências
-        run: npm install # ou npm install
+        run: npm ci
 
       - name: Definir DATABASE_URL para o container MySQL
         run: echo "DATABASE_URL=mysql://root:root@localhost:3306/test_db" >> $GITHUB_ENV
