--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,10 +54,18 @@
     ],
     "import/no-extraneous-dependencies": [
       "error",
-      { "devDependencies": ["**/*.spec.js"] }
+      { "devDependencies": ["**/*.spec.js", "**/*.test.ts", "**/*.spec.ts"] }
     ],
     "prettier/prettier": "error"
   },
+  "overrides": [
+    {
+      "files": ["**/*.test.ts", "**/*.spec.ts"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    }
+  ],
   "settings": {
     "import/resolver": {
       "typescript": {}
