--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-cron": "^3.0.3",
     "pg": "^8.10.0",
     "prisma": "^5.9.1",
+    "prom-client": "^15.1.3",
     "rate-limiter-flexible": "^2.4.1",
     "redis": "^4.6.6",
     "reflect-metadata": "^0.1.13",
@@ -46,6 +47,7 @@
     "ts-jest": "^29.2.5",
     "tsyringe": "^4.7.0",
     "uuid": "^9.0.0",
+    "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
