--- a/env.monitoring.example
+++ b/env.monitoring.example
@@ -1,3 +1,14 @@
+GF_SECURITY_ADMIN_USER=
+GF_SECURITY_ADMIN_PASSWORD=
+GF_SECURITY_SECRET_KEY=
+GF_SERVER_ROOT_URL=http://localhost:3000
+
+SMTP_ENABLED=false
+SMTP_HOST=localhost:587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=alerts@gas-e-agua.com
+
 # Configurações de Monitoramento - Gas e Água Backend
 
 # Logs
