feat: dev and PRD enviromentes config

--- a/env.docker.example
+++ b/env.docker.example
@@ -1,18 +1,18 @@
 # Database
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=senha-root-mysql
+MYSQL_DATABASE=gas_e_agua
+MYSQL_USER=gas_e_agua
+MYSQL_PASSWORD=senha-usuario-mysql
 
 # Application
 NODE_ENV=production
 PORT=3333
-JWT_SECRET=
+JWT_SECRET=chave-jwt-secreta-aqui
 
 # Redis
 REDIS_URL=redis://redis:6379
 
 # Monitoring (opcional - para integrar com stack existente)
-GRAFANA_ADMIN_USER=
-GRAFANA_ADMIN_PASSWORD=
-GRAFANA_SECRET_KEY=
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=senha-grafana
+GRAFANA_SECRET_KEY=chave-secreta-grafana
