--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ name: Deploy to VPS
 on:
   push:
     branches:
-      - develop # Sempre que houver um push para o branch 'develop'
+      - master # dispara após merge na master
 
 jobs:
   deploy: # Nome do job
@@ -33,9 +33,12 @@ jobs:
       - name: Pull latest code and restart app
         run: |
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-            cd gas-e-agua-backend/            # Navega até o diretório do projeto na VPS
-            git pull                          # Atualiza o código com o que foi enviado para o GitHub
-            npm ci                             # Instala dependências
-            npx prisma migrate deploy         # Aplica as migrações do banco de dados
-            pm2 restart gas-e-agua-api        # Reinicia o processo com PM2 (gerenciador de processos Node.js)
+            set -e
+            cd /home/deploy/gas-e-agua-backend
+            git fetch --all
+            git checkout master
+            git pull --ff-only
+            docker compose -f docker-compose.app.yml up -d --build --remove-orphans
+            docker compose -f docker-compose.monitoring-prd.yml up -d --remove-orphans
+            docker system prune -f
           EOF
