--- a/docker-compose.monitoring-dev.yml
+++ b/docker-compose.monitoring-dev.yml
@@ -1,76 +1,70 @@
 version: "3.8"
 
 services:
-  # Prometheus - Coleta de métricas
+  # Prometheus - Coleta de métricas (DEV)
   prometheus:
     image: prom/prometheus:v2.45.0
-    container_name: prometheus
+    container_name: prometheus-dev
     ports:
-      - "9090:9090"
+      - "9091:9090"
     volumes:
-      # arquivos de config do prometheus
       - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./monitoring/prometheus/rules:/etc/prometheus/rules
-      # dados do prometheus para persistência, mesmo se app cair
-      - prometheus_data:/prometheus
+      - prometheus_data_dev:/prometheus
     command:
-      # config file que vem na image (prom/prometheus:v2.45.0)
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
       - "--web.console.libraries=/etc/prometheus/console_libraries"
       - "--web.console.templates=/etc/prometheus/consoles"
-      - "--storage.tsdb.retention.time=200h"
+      - "--storage.tsdb.retention.time=7d"
       - "--web.enable-lifecycle"
       - "--web.enable-admin-api"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
-      - monitoring
+      - monitoring-dev
     restart: unless-stopped
-  # Recarregar a configuração do Prometheus sem reiniciar
-  # EXAMPLE: curl -X POST http://localhost:9090/-/reload
 
-  # Loki - Agregação de logs
+  # Loki - Agregação de logs (DEV)
   loki:
     image: grafana/loki:2.9.0
-    container_name: loki
+    container_name: loki-dev
     ports:
-      # local port:loki port
-      - "3100:3100"
+      - "3101:3100"
     volumes:
       - ./monitoring/loki/loki-config.yml:/etc/loki/local-config.yaml
-      - loki_data:/loki
+      - loki_data_dev:/loki
     command: -config.file=/etc/loki/local-config.yaml
     networks:
-      - monitoring
+      - monitoring-dev
     restart: unless-stopped
 
-  # Promtail - Coleta de logs para o Loki
+  # Promtail - Coleta de logs para o Loki (DEV)
   promtail:
     image: grafana/promtail:2.9.0
-    container_name: promtail
+    container_name: promtail-dev
     volumes:
       - ./monitoring/promtail/promtail-config.yml:/etc/promtail/config.yml
-      - ./logs:/var/log/app
+      - ./logs-dev:/var/log/app
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock
     command: -config.file=/etc/promtail/config.yml
     networks:
-      - monitoring
+      - monitoring-dev
     restart: unless-stopped
 
-  # Grafana - Visualização
+  # Grafana - Visualização (DEV)
   grafana:
     image: grafana/grafana:10.1.0
-    container_name: grafana
+    container_name: grafana-dev
     ports:
-      - "3000:3000"
+      - "3001:3000"
     volumes:
-      - grafana_data:/var/lib/grafana
+      - grafana_data_dev:/var/lib/grafana
       - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
       - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
     env_file:
-      - .env.monitoring
+      - .env.monitoring-dev
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin123}
@@ -78,15 +72,15 @@ services:
       - GF_INSTALL_PLUGINS=grafana-piechart-panel
       - GF_SECURITY_SECRET_KEY=${GRAFANA_SECRET_KEY:-your-secret-key}
     networks:
-      - monitoring
+      - monitoring-dev
     restart: unless-stopped
 
-  # Node Exporter - Métricas do sistema
+  # Node Exporter - Métricas do sistema (DEV)
   node-exporter:
     image: prom/node-exporter:v1.6.0
-    container_name: node-exporter
+    container_name: node-exporter-dev
     ports:
-      - "9100:9100"
+      - "9101:9100"
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -97,15 +91,15 @@ services:
       - "--path.sysfs=/host/sys"
       - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
     networks:
-      - monitoring
+      - monitoring-dev
     restart: unless-stopped
 
-  # cAdvisor - Métricas de containers
+  # cAdvisor - Métricas de containers (DEV)
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.0
-    container_name: cadvisor
+    container_name: cadvisor-dev
     ports:
-      - "8080:8080"
+      - "8081:8080"
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -116,32 +110,32 @@ services:
     devices:
       - /dev/kmsg
     networks:
-      - monitoring
+      - monitoring-dev
     restart: unless-stopped
 
-  # Alertmanager - Gerenciamento de alertas
+  # Alertmanager - Gerenciamento de alertas (DEV)
   alertmanager:
     image: prom/alertmanager:v0.25.0
-    container_name: alertmanager
+    container_name: alertmanager-dev
     ports:
-      - "9093:9093"
+      - "9094:9093"
     volumes:
       - ./monitoring/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
-      - alertmanager_data:/alertmanager
+      - alertmanager_data_dev:/alertmanager
     command:
       - "--config.file=/etc/alertmanager/alertmanager.yml"
       - "--storage.path=/alertmanager"
-      - "--web.external-url=http://localhost:9093"
+      - "--web.external-url=http://localhost:9094"
     networks:
-      - monitoring
+      - monitoring-dev
     restart: unless-stopped
 
 networks:
-  monitoring:
+  monitoring-dev:
     driver: bridge
 
 volumes:
-  prometheus_data:
-  loki_data:
-  grafana_data:
-  alertmanager_data:
+  prometheus_data_dev:
+  loki_data_dev:
+  grafana_data_dev:
+  alertmanager_data_dev:
