fix: deloy docker confs

--- a/env.docker.example
+++ b/env.docker.example
@@ -11,6 +11,8 @@ JWT_SECRET=chave-jwt-secreta-aqui
 
 # Redis
 REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
+REDIS_PORT=6379
 
 # Monitoring (opcional - para integrar com stack existente)
 GRAFANA_ADMIN_USER=admin
