--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,6 +28,6 @@ jobs:
             git checkout develop
             git pull --ff-only
             docker compose -f docker-compose.dev.yml up -d --build --remove-orphans
-            docker compose -f docker-compose.monitoring-dev.yml up -d --remove-orphans
+            docker compose -f docker-compose.monitoring-dev.yml up -d
             docker system prune -f
           EOF
