--- a/env.monitoring.example
+++ b/env.monitoring.example
@@ -24,6 +24,11 @@ METRICS_PORT=3333
 PORT=3333
 NODE_ENV=production
 
+# Redis
+REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 # Alertas (opcional - configure conforme necessário)
 SMTP_HOST=localhost
 SMTP_PORT=587
