--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
             git fetch --all
             git checkout master
             git pull --ff-only
-            docker compose -f docker-compose.app.yml up -d --build --remove-orphans
-            docker compose -f docker-compose.monitoring-prd.yml up -d 
+            docker compose -p gas-e-agua-prd -f docker-compose.app.yml up -d --build --remove-orphans
+            docker compose -p gas-e-agua-prd -f docker-compose.monitoring-prd.yml up -d 
             docker system prune -f
           EOF
