--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -5,7 +5,11 @@ name: Deploy to VPS (PRD)
 on:
   push:
     branches:
-      - master # dispara após merge na master
+      - master
+
+concurrency:
+  group: vps-deploy
+  cancel-in-progress: false
 
 jobs:
   deploy:
@@ -19,10 +23,22 @@ jobs:
       # Etapa 2: Configurar SSH para conectar na VPS
       - name: Setup SSH
         run: |
-          mkdir -p ~/.ssh  # Cria diretório .ssh se não existir
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa  # Salva chave privada
-          chmod 600 ~/.ssh/id_rsa  # Define permissões corretas (segurança)
-          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts  # Adiciona VPS aos hosts conhecidos
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Ensure correct branch
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+            set -e
+            cd /home/deploy/gas-e-agua-backend
+            git fetch --all
+            git checkout master
+            git pull --ff-only
+            chmod +x scripts/*.sh
+            echo "✅ Repository updated to master branch"
+          EOF
 
       # Etapa 3: Criar backup do banco ANTES do deploy (CRÍTICO em produção)
       - name: Backup database
@@ -42,7 +58,6 @@ jobs:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
           vps-host: ${{ secrets.VPS_HOST }}
           vps-user: ${{ secrets.VPS_USER }}
-          branch: master
 
       # Etapa 5: Verificar saúde da aplicação (10 tentativas em produção)
       - name: Health check
