--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,6 +38,7 @@ services:
     environment:
       NODE_ENV: development
       PORT: 3333
+      DATABASE_URL: mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql:3306/${MYSQL_DATABASE}
       JWT_SECRET: ${JWT_SECRET:-your-jwt-secret-key}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
     volumes:
