refactor: reorganize scripts into categorized folders
- Move deploy scripts to scripts/deploy/
- Move database scripts to scripts/database/
- Move monitoring scripts to scripts/monitoring/
- Move docker scripts to scripts/docker/
- Move setup scripts to scripts/setup/
- Add MySQL auth initialization script
- Update GitHub Actions workflows to use new paths
- Improve deploy script with GitHub Actions logging support

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -33,7 +33,7 @@ jobs:
             git fetch --all
             git checkout develop
             git pull --ff-only
-            chmod +x scripts/*.sh
+            chmod +x scripts/**/*.sh
             echo "✅ Repository updated to develop branch"
           EOF
 
