--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -32,7 +32,7 @@ runs:
       run: |
         START_TIME=$SECONDS
 
-        DEPLOY_OUTPUT=$(ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ inputs.vps-user }}@${{ inputs.vps-host }} "cd /home/deploy/gas-e-agua-backend && bash ./scripts/deploy.sh ${{ inputs.environment }}")
+        DEPLOY_OUTPUT=$(ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ inputs.vps-user }}@${{ inputs.vps-host }} "cd /home/deploy/gas-e-agua-backend && bash ./scripts/deploy/deploy.sh ${{ inputs.environment }} 2>&1")
         DEPLOY_EXIT_CODE=$?
 
         echo "$DEPLOY_OUTPUT"
