--- a/.github/workflows/test-ghcr.yml
+++ b/.github/workflows/test-ghcr.yml
@@ -29,8 +29,9 @@ jobs:
           # Pull a small test image
           docker pull hello-world
 
-          # Tag it with your repository
-          IMAGE_NAME="ghcr.io/${{ github.repository_owner }}/gas-e-agua-backend-test"
+          # Tag it with your repository (lowercase required by GHCR)
+          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME="ghcr.io/${REPO_OWNER}/gas-e-agua-backend-test"
           docker tag hello-world $IMAGE_NAME:test
 
           # Push to GHCR
