--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -1,24 +1,27 @@
-# Nome do workflow que aparecerá na aba "Actions" do GitHub
 name: Deploy to VPS (PRD)
 
-# Quando esse workflow será executado
 on:
-  push:
+  workflow_run:
+    workflows: ["🏗️ Build and Push to GHCR"]
+    types:
+      - completed
     branches:
       - master
+  workflow_dispatch:
 
 concurrency:
-  group: vps-deploy
+  group: vps-deploy-prd
   cancel-in-progress: false
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest # Job rodará em máquina virtual Ubuntu
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
 
     steps:
       # Etapa 1: Fazer checkout (clonar) o código do repositório
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Etapa 2: Configurar SSH para conectar na VPS
       - name: Setup SSH
@@ -28,7 +31,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Ensure correct branch
+      - name: Update repository on VPS
         run: |
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             set -e
@@ -52,12 +55,21 @@ jobs:
       # Etapa 4: Deploy em PRODUÇÃO (build, migrations, containers)
       - name: Deploy application
         id: deploy
-        uses: ./.github/actions/deploy
-        with:
-          environment: prd
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          vps-host: ${{ secrets.VPS_HOST }}
-          vps-user: ${{ secrets.VPS_USER }}
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+            set -e
+            cd /home/deploy/gas-e-agua-backend
+            
+            # Login no GHCR
+            echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            
+            # Definir variáveis
+            export DOCKER_IMAGE="ghcr.io/${{ github.repository }}"
+            export IMAGE_TAG="master-latest"
+            
+            # Executar deploy script
+            bash ./scripts/deploy/deploy.sh prd
+          EOF
 
       # Etapa 5: Verificar saúde da aplicação (10 tentativas em produção)
       - name: Health check
@@ -67,7 +79,6 @@ jobs:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
           vps-host: ${{ secrets.VPS_HOST }}
           vps-user: ${{ secrets.VPS_USER }}
-          max-retries: "10" # Mais tentativas em produção
 
       # Etapa 6: Notificar sucesso (Discord + Slack)
       - name: Notify success
@@ -76,9 +87,8 @@ jobs:
         with:
           status: success
           environment: prd
-          message: "Production deploy completed in ${{ steps.deploy.outputs.deploy-time }}s"
+          message: "Deploy completed successfully"
           discord-webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          slack-webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
 
       # Etapa 7: Notificar FALHA CRÍTICA em produção (Discord + Slack)
       - name: Notify failure
@@ -87,6 +97,5 @@ jobs:
         with:
           status: failure
           environment: prd
-          message: "🚨 PRODUCTION DEPLOY FAILED - Immediate action required!"
+          message: "Deploy failed - check logs for details"
           discord-webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          slack-webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
