feat: configura docker-compose para usar imagens do GHCR
- Adiciona suporte a variável APP_IMAGE
- Se APP_IMAGE definido: usa imagem (GHCR)
- Se APP_IMAGE não definido: build local (fallback)
- Mantém compatibilidade com desenvolvimento local

--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -26,6 +26,7 @@ services:
 
   # Node.js Application
   app:
+    image: ${APP_IMAGE:-gas-e-agua-prd-app:latest}
     build:
       context: .
       dockerfile: Dockerfile
